# urlessen

./: .gitignore  App.example.toml  Cargo.toml  README.md  Rocket.example.toml
migrations/: 20240306184914_init.up.sql  20241018222817_urls.down.sql  20241018222817_urls.up.sql
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  urls.rs  utils.rs
src/auth/: handlers.rs  repo.rs  validators.rs
src/urls/: handlers.rs  repo.rs  validators.rs
