[package]
name = "urlessen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.37", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
jsonwebtoken = "9.2.0"
nanoid = "0.4.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json", "uuid", "secrets"] }
rocket_cors = "0.6.0"
rocket_ws = "0.1.0"
url = "2.5.3"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "uuid", "time", "chrono"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_postgres"]
